--- a/src/main/resources/static/app/register/register.view.html
+++ b/src/main/resources/static/app/register/register.view.html
@@ -24,12 +24,12 @@
           <input class="form-control" type="email" name="email" id="email" placeholder="Email"
                  ng-model="registerData.email" ng-disabled="registerData.action != 'Register'"
                  required/>
-          <span class="input-group-addon"
-                popover-placement="top-right"
-                popover-trigger="'outsideClick'"
-                popover-title="Registration limitations"
-                uib-popover-html="'Registration is limited to <b>bnymellon.com</b> domain only'">
-            <i class="glyphicon glyphicon-info-sign"></i></span>
+<!--          <span class="input-group-addon"-->
+<!--                popover-placement="top-right"-->
+<!--                popover-trigger="'outsideClick'"-->
+<!--                popover-title="Registration limitations"-->
+<!--                uib-popover-html="'Registration is limited to <b>bnymellon.com</b> domain only'">-->
+<!--            <i class="glyphicon glyphicon-info-sign"></i></span>-->
         </div>
 
         <div style="margin-bottom: 25px" class="input-group">
