--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,9 @@
     gtag('config', 'G-PERT2E4TVT');
     </script>
 
+    <!-- reCAPTCHA  -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
