removed google analytics and recaptch

--- a/src/main/resources/static/app/register/email-validation.view.html
+++ b/src/main/resources/static/app/register/email-validation.view.html
@@ -19,9 +19,9 @@
                     </div>
                 </div>
 
-                <div style="margin-top: 25px;" class="form-group">
-                    <div class="g-recaptcha" data-sitekey="6LfgMaEiAAAAAMBj5LIxog-7lNXDS1pJvEcnlbf5"></div>
-                </div>
+<!--                <div style="margin-top: 25px;" class="form-group">-->
+<!--                    <div class="g-recaptcha" data-sitekey="6LfgMaEiAAAAAMBj5LIxog-7lNXDS1pJvEcnlbf5"></div>-->
+<!--                </div>-->
 
                 <div class="form-group">
                     <input class="btn btn-success" type="submit" name="submit_reg" value="Send"/>
