--- a/src/main/resources/static/app/login/login.view.html
+++ b/src/main/resources/static/app/login/login.view.html
@@ -19,7 +19,7 @@
         <div class="input-group">
           <div class="checkbox">
             <label>
-              <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+              <input type="checkbox" name="remember-me"> Remember me
             </label>
           </div>
         </div>
