--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PERT2E4TVT"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!--    &lt;!&ndash; Google tag (gtag.js) &ndash;&gt;-->
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PERT2E4TVT"></script>-->
+<!--    <script>-->
+<!--    window.dataLayer = window.dataLayer || [];-->
+<!--    function gtag(){dataLayer.push(arguments);}-->
+<!--    gtag('js', new Date());-->
 
-    gtag('config', 'G-PERT2E4TVT');
-    </script>
+<!--    gtag('config', 'G-PERT2E4TVT');-->
+<!--    </script>-->
 
-    <!-- reCAPTCHA  -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<!--    &lt;!&ndash; reCAPTCHA  &ndash;&gt;-->
+<!--    <script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
