--- a/src/main/resources/static/app/ranking/ranking.view.html
+++ b/src/main/resources/static/app/ranking/ranking.view.html
@@ -4,7 +4,7 @@
         <h2>Ranking <small><a class="btn btn-link" ui-sref="rules">Rules</a></small></h2>
         <p>Welcome to Qatar 2022 world cup betting competition:</p>
 
-        <table class="table table-hover table-striped table-bordered">
+        <table class="table table-condensed table-hover table-striped table-bordered">
             <thead>
             <tr>
                 <th>#</th>
