UI fixes adjust to mobile

--- a/src/main/resources/static/app/rules/rules.view.html
+++ b/src/main/resources/static/app/rules/rules.view.html
@@ -35,12 +35,11 @@
             <li>(result is determined after 90 minutes, not including extra time/penalties)</li>
         </ul>
 
-        e.g.:<br>
-        Argentina-Iceland<br>
-        You guessed Argentina wins 3-1<br>
-        If Iceland wins or the match ends up with a draw - you get no points<br>
-        If Argentina wins in every score except 3-1 - you get 1 point<br>
-        If Argentina wins exactly 3-1 - you get 3 points<br><br>
+        e.g: United States vs Wales<br>
+        You guessed United States wins 3-1<br>
+        If Wales wins or the match ends up with a draw - you get no points<br>
+        If United States wins in every score except 3-1 - you get 1 point<br>
+        If United States wins exactly 3-1 - you get 3 points<br><br>
 
         This is relevant to all tournament matches (from group stage till the final)<br><br>
 
