--- a/src/main/resources/static/app/rules/rules.view.html
+++ b/src/main/resources/static/app/rules/rules.view.html
@@ -6,13 +6,14 @@
             You are more than welcome to join in, but before you do, please take few minutes to read the rules:
         </h4>
 
+        <br><ins>Distribution of spoils:</ins><br><br>
+
         Your main goal is to gain as many points as possible<br>
         At the end of the tournament, top 3 users will win the pot<br>
         First place - 50% of the pot<br>
         Second place - 30% of the pot<br>
         Third place - 20% of the pot<br>
-        pot size depends on how many users will join in<br>
-        (our hosting costs will be taken from the pot (~50$))<br><br>
+        pot size depends on how many users will join in<br><br>
 
         And what if more than one user is in the first 3 places?<br>
         1. 2 users share the the highest score<br>
@@ -30,9 +31,9 @@
 
         Match Points (can be updated during the tournament, each match until it's kickoff time)<br>
         <ul>
-            <li>Correct match result (1X2) worth 1 point</li>
-            <li>Guessing exact match score worth another 2 points</li>
-            <li>(result is determined after 90 minutes, not including extra time/penalties)</li>
+            <li><b>Correct match result (1X2) worth 1 point</b></li>
+            <li><b>Guessing exact match score worth another 2 points</b></li>
+            <li><b>result is determined after 90 minutes, not including extra time/penalties</b></li>
         </ul>
 
         e.g: United States vs Wales<br>
@@ -47,19 +48,23 @@
         Make sure you place your bet before knockout matches, you don't want to lose points because of that<br>
         Betting on knockout matches is done regardless to the teams chosen by you as qualifiers<br><br>
 
-        Qualifier Points (can be changed until the tournament starts)<br>
+        <br><br><ins>Qualifier Bets:</ins><br><br>
+
+        <b>Qualifier Points can be changed until the tournament starts</b><br>
         For every correct qualifier you get:
-        <ul>
-            <li>Round of 16 - 2 point</li>
-            <li>Quarter final - 4 points</li>
-            <li>Semi-final - 6 points</li>
-            <li>Final - 8 points</li>
-            <li>Third Place - 10 points</li>
-            <li>Winner - 12 points</li>
-        </ul>
+        <b>
+            <ul>
+                <li>Round of 16 - 2 point</li>
+                <li>Quarter final - 4 points</li>
+                <li>Semi-final - 6 points</li>
+                <li>Final - 8 points</li>
+                <li>Third Place - 10 points</li>
+                <li>Winner - 12 points</li>
+            </ul>
+        </b>
 
 
-        <ins>Participation Method and Costs</ins><br><br>
+        <br><br><ins>Participation Method and Costs</ins><br><br>
 
         Joining can be done via your Facebook/Google account,<br>
         Payment cannot be done using our website - so it's in the good old fashioned way..<br>
